# Minecraft_Linker_Bot_Rust_Edition

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  conf.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: embed.rs  main.rs
