[package]
name = "Minecraft_Linker_Bot_Rust_Edition"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Tienux/Minecraft_Linker_Bot_Rust_Edition"
readme = "README.md"

[dependencies]
serenity = "0.12.5"
tokio = { version = "1.52.1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"